added arabic translate json for about page

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -7,5 +7,53 @@
             "roleList":["ويب", "الواجهة الأمامية", "الواجهة الخلفية"],
             "lastRole":""
         }
+    },
+    "aboutPage": {
+        "aboutContent": {
+            "mainHeading": {
+                "smallText": "تعرف على",
+                "mainText": "معلومات",
+                "highlightedText": "عني"
+            },
+            "content": {
+                "question": "من أنا؟",
+                "name": "أنا الليزاطي محمد",
+                "answer": "مطوّر برمجيات متكامل، أبلغ من العمر {{years}} عامًا وأعيش في {{city}}، المغرب. يمكنك التواصل معي عبر البريد الإلكتروني {{email}} أو رقم الهاتف {{phone}}.",
+                "downloadLink":"تحميل السيرة الداتية"
+            }
+        },
+        "serviceContent": {
+            "mainHeading": {
+                "smallText": "الخدمات التي أقدمها لعملائي",
+                "mainText": "خدماتي",
+                "highlightedText": "المميزة"
+            },
+            "services": {
+                "webDesign": {
+                    "name": "تصميم الويب",
+                    "description": "لوريم إيبسوم هو نص افتراضي يستخدم في مجال الطباعة والنشر. يتم استخدامه كعينة نص لإظهار التصميم دون الحاجة إلى محتوى فعلي."
+                },
+                "webDevelopment": {
+                    "name": "تطوير الويب",
+                    "description": "لوريم إيبسوم هو نص افتراضي يستخدم في مجال الطباعة والنشر. يتم استخدامه كعينة نص لإظهار التصميم دون الحاجة إلى محتوى فعلي."
+                },
+                "mobileAppDevelopment": {
+                    "name": "تطوير تطبيقات الهاتف",
+                    "description": "لوريم إيبسوم هو نص افتراضي يستخدم في مجال الطباعة والنشر. يتم استخدامه كعينة نص لإظهار التصميم دون الحاجة إلى محتوى فعلي."
+                },
+                "digitalMarketing": {
+                    "name": "التسويق الرقمي",
+                    "description": "لوريم إيبسوم هو نص افتراضي يستخدم في مجال الطباعة والنشر. يتم استخدامه كعينة نص لإظهار التصميم دون الحاجة إلى محتوى فعلي."
+                },
+                "seoSem": {
+                    "name": "تحسين محركات البحث والإعلانات الممولة",
+                    "description": "لوريم إيبسوم هو نص افتراضي يستخدم في مجال الطباعة والنشر. يتم استخدامه كعينة نص لإظهار التصميم دون الحاجة إلى محتوى فعلي."
+                },
+                "brandingIdentity": {
+                    "name": "العلامة التجارية والهوية",
+                    "description": "لوريم إيبسوم هو نص افتراضي يستخدم في مجال الطباعة والنشر. يتم استخدامه كعينة نص لإظهار التصميم دون الحاجة إلى محتوى فعلي."
+                }
+            }
+        }
     }
 }
