add arabic translation for all pages

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -1,4 +1,13 @@
 {
+    "navbar": {
+        "links": {
+            "home": "الرئيسية",
+            "about": "عن",
+            "resume": "السيرة الذاتية",
+            "portfolio": "المعرض",
+            "contact": "اتصل"
+        }
+    },
     "homePage":{
         "landing":{
             "lastName":"الليزاطي",
@@ -11,48 +20,210 @@
     "aboutPage": {
         "aboutContent": {
             "mainHeading": {
-                "smallText": "تعرف على",
-                "mainText": "معلومات",
-                "highlightedText": "عني"
+                "smallText": "اعرف",
+                "mainText": "عن",
+                "highlightedText": "نفسي"
             },
             "content": {
                 "question": "من أنا؟",
-                "name": "أنا الليزاطي محمد",
-                "answer": "مطوّر برمجيات متكامل، أبلغ من العمر {{years}} عامًا وأعيش في {{city}}، المغرب. يمكنك التواصل معي عبر البريد الإلكتروني {{email}} أو رقم الهاتف {{phone}}.",
-                "downloadLink":"تحميل السيرة الداتية"
+                "name": "أنا ليزاتي محمد",
+                "answer": "مطور فول ستاك، عمري {{years}} سنة من {{city}}، {{country}}. بريدي الإلكتروني هو {{email}} ورقم هاتفي هو {{phone}}.",
+                "downloadLink": "تحميل السيرة الذاتية"
             }
         },
         "serviceContent": {
             "mainHeading": {
                 "smallText": "الخدمات التي أقدمها لعملائي",
-                "mainText": "خدماتي",
-                "highlightedText": "المميزة"
+                "mainText": "خدماتي"
             },
             "services": {
                 "webDesign": {
                     "name": "تصميم الويب",
-                    "description": "لوريم إيبسوم هو نص افتراضي يستخدم في مجال الطباعة والنشر. يتم استخدامه كعينة نص لإظهار التصميم دون الحاجة إلى محتوى فعلي."
+                    "description": "لوريم إيبسوم دولور سيت أميت، كونسيكتتور أديبيسيسينغ إيليت. ديكتا كوروبتي إن ريسييانديس لابوروم كويز لابوري دولورس نون أومينيس سايبي نيهي."
                 },
                 "webDevelopment": {
                     "name": "تطوير الويب",
-                    "description": "لوريم إيبسوم هو نص افتراضي يستخدم في مجال الطباعة والنشر. يتم استخدامه كعينة نص لإظهار التصميم دون الحاجة إلى محتوى فعلي."
+                    "description": "لوريم إيبسوم دولور سيت أميت، كونسيكتتور أديبيسيسينغ إيليت. ديكتا كوروبتي إن ريسييانديس لابوروم كويز لابوري دولورس نون أومينيس سايبي نيهي."
                 },
                 "mobileAppDevelopment": {
-                    "name": "تطوير تطبيقات الهاتف",
-                    "description": "لوريم إيبسوم هو نص افتراضي يستخدم في مجال الطباعة والنشر. يتم استخدامه كعينة نص لإظهار التصميم دون الحاجة إلى محتوى فعلي."
+                    "name": "تطوير تطبيقات الموبايل",
+                    "description": "لوريم إيبسوم دولور سيت أميت، كونسيكتتور أديبيسيسينغ إيليت. ديكتا كوروبتي إن ريسييانديس لابوروم كويز لابوري دولورس نون أومينيس سايبي نيهي."
                 },
                 "digitalMarketing": {
                     "name": "التسويق الرقمي",
-                    "description": "لوريم إيبسوم هو نص افتراضي يستخدم في مجال الطباعة والنشر. يتم استخدامه كعينة نص لإظهار التصميم دون الحاجة إلى محتوى فعلي."
+                    "description": "لوريم إيبسوم دولور سيت أميت، كونسيكتتور أديبيسيسينغ إيليت. ديكتا كوروبتي إن ريسييانديس لابوروم كويز لابوري دولورس نون أومينيس سايبي نيهي."
                 },
                 "seoSem": {
-                    "name": "تحسين محركات البحث والإعلانات الممولة",
-                    "description": "لوريم إيبسوم هو نص افتراضي يستخدم في مجال الطباعة والنشر. يتم استخدامه كعينة نص لإظهار التصميم دون الحاجة إلى محتوى فعلي."
+                    "name": "تحسين محركات البحث & SEM",
+                    "description": "لوريم إيبسوم دولور سيت أميت، كونسيكتتور أديبيسيسينغ إيليت. ديكتا كوروبتي إن ريسييانديس لابوروم كويز لابوري دولورس نون أومينيس سايبي نيهي."
                 },
                 "brandingIdentity": {
                     "name": "العلامة التجارية والهوية",
-                    "description": "لوريم إيبسوم هو نص افتراضي يستخدم في مجال الطباعة والنشر. يتم استخدامه كعينة نص لإظهار التصميم دون الحاجة إلى محتوى فعلي."
+                    "description": "لوريم إيبسوم دولور سيت أميت، كونسيكتتور أديبيسيسينغ إيليت. ديكتا كوروبتي إن ريسييانديس لابوروم كويز لابوري دولورس نون أومينيس سايبي نيهي."
                 }
+            }
+        }
+    },
+    "resumePage": {
+        "resumeContent": {
+            "mainHeading": {
+                "smallText": "إليك",
+                "mainText": "سيرتي",
+                "highlightedText": "الذاتية"
+            },
+            "content": {
+                "titleEducation": "التعليم",
+                "education": [
+                    {
+                        "year": "2024",
+                        "title": "دبلوم اللغة الألمانية B1",
+                        "date": "TELC / 2024",
+                        "description": "شهادة لغة للمعرفة الأساسية المتقدمة في اللغة الألمانية."
+                    },
+                    {
+                        "year": "2022",
+                        "title": "دبلوم تقني متخصص",
+                        "date": "CFMNTIOE وجدة / 2020 - 2022",
+                        "description": "تقني متخصص في تطوير البرمجيات في مؤسسة الأوفشورينغ وجدة."
+                    },
+                    {
+                        "year": "2022",
+                        "title": "اختصاصي في مايكروسوفت أوفيس",
+                        "date": "مايكروسوفت / 2022",
+                        "description": "وورد 2016، إكسل 2016"
+                    },
+                    {
+                        "year": "2022",
+                        "title": "شهادة في تقنيات الكمبيوتر الأساسية",
+                        "date": "CISCO / 2021",
+                        "description": "أكاديمية شبكات سيسكو"
+                    },
+                    {
+                        "year": "2018",
+                        "title": "بكالوريا في العلوم الفيزيائية",
+                        "date": "ثانوية الشريف الإدريسي / 2017 - 2018",
+                        "description": "بكالوريا في العلوم الفيزيائية."
+                    }
+                ],
+                "titleExperience": "الخبرات",
+                "experience": [
+                    {
+                        "year": "2025",
+                        "title": "تدريب: مطور فول ستاك",
+                        "date": "سوفت كاكتوس / 2024 - 2025، وجدة",
+                        "description": "عملت على مشروع التجارة الإلكترونية، حيث قمت بتخصيص واجهة المستخدم باستخدام React JS وحل بعض المشاكل في الخلفية باستخدام Laravel. كما قمت بتحليل مشروع المبيعات والمشتريات من البداية، أنشأت مخطط UML، وطورت الخلفية باستخدام Laravel."
+                    },
+                    {
+                        "year": "2023",
+                        "title": "تدريب: مطور فول ستاك",
+                        "date": "بيل ليرنينغ برو / 2022 - 2023، وجدة",
+                        "description": "ساهمت في ثلاثة مشاريع. كمطور فول ستاك، قمت ببناء منصة تعليمية باستخدام HTML وBootstrap 5 وJavaScript وPHP وMySQL، مع التركيز على تجربة المستخدم، وأمان البيانات، والتخزين الفعال. كما عملت كمطور باك إند، حيث طورت نظامًا لإدارة الطلبات وملفات المشاريع باستخدام ASP.NET Core، وأنماط التصميم، والبرمجة الكائنية، وJWT، وSQL Server."
+                    },
+                    {
+                        "year": "2023",
+                        "title": "مستقل: مطور باك إند",
+                        "date": "ديجيتال باترفلاي فريلانس / 2023، وجدة",
+                        "description": "طورت نظامًا لمنصة Marrakech Invest باستخدام PHP. كانت مسؤولياتي تتضمن تطوير الخلفية وإنشاء قاعدة البيانات."
+                    },
+                    {
+                        "year": "2022",
+                        "title": "تدريب: مطور باك إند",
+                        "date": "سيمبانيكس / 2022",
+                        "description": "إنشاء منصة تجارة إلكترونية ومنصة تعليمية باستخدام HTML وBootstrap 5 وJavaScript وPHP وMySQL."
+                    }
+                ]
+            }
+        },
+        "skillContent": {
+            "mainHeading": {
+                "smallText": "مستوى معرفتي",
+                "mainText": "مهاراتي"
+            },
+            "content": {
+                "skills": [
+                    {
+                        "name": "HTML",
+                        "percentage": 100
+                    },
+                    {
+                        "name": "CSS",
+                        "percentage": 90
+                    },
+                    {
+                        "name": "SASS",
+                        "percentage": 80
+                    },
+                    {
+                        "name": "JAVASCRIPT",
+                        "percentage": 85
+                    },
+                    {
+                        "name": "TYPESCRIPT",
+                        "percentage": 75
+                    },
+                    {
+                        "name": "REACT JS",
+                        "percentage": 80
+                    },
+                    {
+                        "name": "PHP",
+                        "percentage": 85
+                    },
+                    {
+                        "name": "LARAVEL",
+                        "percentage": 80
+                    },
+                    {
+                        "name": "ASP.NET Core",
+                        "percentage": 85
+                    },
+                    {
+                        "name": "SQL",
+                        "percentage": 85
+                    }
+                ]
+            }
+        }
+    },
+    "portfolioPage": {
+        "portfolioContent": {
+            "mainHeading": {
+                "smallText": "بعض من أعمالي",
+                "mainText": "معرضي"
+            },
+            "content": {
+                "categories": [
+                    {
+                        "name": "all",
+                        "label": "الكل"
+                    },
+                    {
+                        "name": "desktop",
+                        "label": "سطح المكتب"
+                    },
+                    {
+                        "name": "web",
+                        "label": "الويب"
+                    },
+                    {
+                        "name": "mobile",
+                        "label": "الموبايل"
+                    }
+                ]
+            }
+        }
+    },
+    "contactPage": {
+        "contactContent": {
+            "mainHeading": {
+                "smallText": "تواصل معي",
+                "mainText": "اتصل"
+            },
+            "content": {
+                "name": "الاسم",
+                "email": "البريد الإلكتروني",
+                "message": "الرسالة",
+                "sendMessage": "إرسال الرسالة"
             }
         }
     }
