--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -38,10 +38,10 @@
                 "readLess":"read less",
                 "details": [
                     { "label": "Age", "value": "{{year}}" },
-                    { "label": "Language", "value": "Hindi / English" },
-                    { "label": "Phone", "value": "+123-456-7890" },
-                    { "label": "Email", "value": "ShaikhAnas@gmail.com" },
-                    { "label": "Address", "value": "Mumbai, India - 400104" },
+                    { "label": "Language", "value": null },
+                    { "label": "Phone", "value": "{{phone}}" },
+                    { "label": "Email", "value": "{{email}}" },
+                    { "label": "Address", "value": "Hay Benazzi Nr 28 Rue 26 Oujda" },
                     { "label": "Freelance", "value": "Available" }
                 ],
                 "downloadLink": "Download Cv"
